test/src/e2e_vm_tests/test_programs/should_fail/predicate_log/src/main.sw
predicate;

use std::{
    inputs::input_coin_owner,
    logging::log,
};

fn main() -> bool {
    log::<Address>(input_coin_owner(0).unwrap());
        
    true
}